@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 IDsec Solutions AB
+ * Copyright 2019-2023 IDsec Solutions AB
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -54,7 +54,7 @@ public enum RequestedCertificateAttributeType {
         return t;
       }
     }
-    throw new IllegalArgumentException(String.format("%s is not a valid RequestedCertificateAttributeType", type));
+    throw new IllegalArgumentException("%s is not a valid RequestedCertificateAttributeType".formatted(type));
   }
 
   /** The type. */
